--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
 </head>
 <body>
+    <button class="add-book-button">Add Book</button>
 
+    <form action=""></form>
+
+    <table class="book-table">
+        <caption>Books in Library</caption>
+        <thead>
+            <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Author</th>
+                <th scope="col">Pages</th>
+                <th scope="col">Read</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
 </body>
+    <script src="scripts.js"></script>
 </html>
