--- a/index.html
+++ b/index.html
@@ -7,10 +7,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button class="add-book-button">Add Book</button>
-
-    <form action=""></form>
-
+    <form>
+        <ul>
+            <li>
+                <label for="title">Title</label>
+                <input type="text" id="title" name="title" required />
+            </li>
+            <li>
+                <label for="author">Author</label>
+                <input type="text" id="author" name="author" required />
+            </li>
+            <li>
+                <label for="pages">Pages</label>
+                <input type="number" id="pages" name="pages" required />
+            </li>
+            <li>
+                <label for="read">Have Read</label>
+                <input type="radio" id="read" name="read" value="A" />
+            </li>
+            <li>
+                <label for="unread">Unread</label>
+                <input type="radio" id="unread" name="read" value="A" />
+            </li>
+        </ul>
+        <button type="button" class="add-book-button">Add Book</button>
+    </form>
     <table class="book-table">
         <caption>Books in Library</caption>
         <thead>
@@ -19,11 +40,10 @@
                 <th scope="col">Author</th>
                 <th scope="col">Pages</th>
                 <th scope="col">Read</th>
+                <th scope="col">Delete</th>
             </tr>
         </thead>
-        <tbody>
-
-        </tbody>
+        <tbody></tbody>
     </table>
 </body>
     <script src="scripts.js"></script>
